@@ -11,9 +11,11 @@ int joblist_append(server *srv, connection *con) {
 	if (srv->joblist->size == 0) {
 		srv->joblist->size  = 16;
 		srv->joblist->ptr   = malloc(sizeof(*srv->joblist->ptr) * srv->joblist->size);
+		force_assert(NULL != srv->joblist->ptr);
 	} else if (srv->joblist->used == srv->joblist->size) {
 		srv->joblist->size += 16;
 		srv->joblist->ptr   = realloc(srv->joblist->ptr, sizeof(*srv->joblist->ptr) * srv->joblist->size);
+		force_assert(NULL != srv->joblist->ptr);
 	}
 
 	srv->joblist->ptr[srv->joblist->used++] = con;
@@ -46,9 +48,11 @@ int fdwaitqueue_append(server *srv, connection *con) {
 	if (srv->fdwaitqueue->size == 0) {
 		srv->fdwaitqueue->size  = 16;
 		srv->fdwaitqueue->ptr   = malloc(sizeof(*(srv->fdwaitqueue->ptr)) * srv->fdwaitqueue->size);
+		force_assert(NULL != srv->fdwaitqueue->ptr);
 	} else if (srv->fdwaitqueue->used == srv->fdwaitqueue->size) {
 		srv->fdwaitqueue->size += 16;
 		srv->fdwaitqueue->ptr   = realloc(srv->fdwaitqueue->ptr, sizeof(*(srv->fdwaitqueue->ptr)) * srv->fdwaitqueue->size);
+		force_assert(NULL != srv->fdwaitqueue->ptr);
 	}
 
 	srv->fdwaitqueue->ptr[srv->fdwaitqueue->used++] = con;
